objects/BMCServiceDesk__BMC_OperatingSystem__c.object
<CustomObject>
    <description>Class that stores information about software or firmware that controls the operation of a computer and directs the processing of programs. This class corresponds to the DMTF CIM_OperatingSystem class.</description>
    <fields>
        <fullName>BMCServiceDesk__CountryCode__c</fullName>
        <label>Country Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxNumberOfProcesses__c</fullName>
        <label>Maximum Number Of Processes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MaxProcessMemorySize__c</fullName>
        <label>Maximum Process Memory Size</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSLanguage__c</fullName>
        <label>OS Language</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSProductSuite__c</fullName>
        <label>OS Product Suite</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>BackOffice</fullName>
                </value>
                <value>
                    <fullName>Communication Server</fullName>
                </value>
                <value>
                    <fullName>Terminal Server</fullName>
                </value>
                <value>
                    <fullName>Small Business (Restricted)</fullName>
                </value>
                <value>
                    <fullName>Embedded NT</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__OSType__c</fullName>
        <label>OS Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>MACOS</fullName>
                </value>
                <value>
                    <fullName>ATTUNIX</fullName>
                </value>
                <value>
                    <fullName>DGUX</fullName>
                </value>
                <value>
                    <fullName>DECNT</fullName>
                </value>
                <value>
                    <fullName>Tru64 UNIX</fullName>
                </value>
                <value>
                    <fullName>Open VMS</fullName>
                </value>
                <value>
                    <fullName>HPUX</fullName>
                </value>
                <value>
                    <fullName>AIX</fullName>
                </value>
                <value>
                    <fullName>z/OS</fullName>
                </value>
                <value>
                    <fullName>OS400</fullName>
                </value>
                <value>
                    <fullName>OS/2</fullName>
                </value>
                <value>
                    <fullName>JavaVM</fullName>
                </value>
                <value>
                    <fullName>MSDOS</fullName>
                </value>
                <value>
                    <fullName>WIN3x</fullName>
                </value>
                <value>
                    <fullName>WIN95</fullName>
                </value>
                <value>
                    <fullName>WIN98</fullName>
                </value>
                <value>
                    <fullName>WINNT</fullName>
                </value>
                <value>
                    <fullName>WINCE</fullName>
                </value>
                <value>
                    <fullName>NCR3000</fullName>
                </value>
                <value>
                    <fullName>NetWare</fullName>
                </value>
                <value>
                    <fullName>OSF</fullName>
                </value>
                <value>
                    <fullName>DC/OS</fullName>
                </value>
                <value>
                    <fullName>Reliant UNIX</fullName>
                </value>
                <value>
                    <fullName>SCO UnixWare</fullName>
                </value>
                <value>
                    <fullName>SCO Open Server</fullName>
                </value>
                <value>
                    <fullName>Sequent</fullName>
                </value>
                <value>
                    <fullName>IRIX</fullName>
                </value>
                <value>
                    <fullName>Solaris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Organization__c</fullName>
        <label>Organization</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PAEEnabled__c</fullName>
        <label>PAE Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProductType__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Station</fullName>
                </value>
                <value>
                    <fullName>Domain Controller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SuiteMask__c</fullName>
        <label>Suite Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SystemDirectory__c</fullName>
        <label>System Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Operating System</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BMC_OperatingSystem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operating Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>